[package]
name = "using-another-sys-crate"
version = "0.1.0"
authors = ["jiayuxin <13520723393@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libz-sys = "1.0.25"
[build-dependencies]
cc = "1.0.46"
pkg-config="0.3.16"